# w32

./: .gitignore  CMakeLists.txt  README.md
src/w32/: com.hpp  fileapi.hpp  fundamentals.hpp  guid.hpp  result.hpp  result_test.cpp  shell.hpp  test.cpp  wic.hpp
src/w32/com/: com.hpp  com_ptr.hpp  com_ptr_test.cpp  error.hpp  ocidl.hpp  stream.hpp  stream_test.cpp  unknown.hpp  unknown_test.cpp
src/w32/shell/: shlwapi.hpp
src/w32/utils/: enum_flags.hpp  enum_flags_test.cpp
src/w32/wic/: bitmap.hpp  bitmap_clipper.hpp  bitmap_codec_info.hpp  bitmap_codec_info_test.cpp  bitmap_decoder.hpp  bitmap_decoder_info.hpp  bitmap_decoder_info_test.cpp  bitmap_decoder_test.cpp  bitmap_encoder.hpp  bitmap_encoder_test.cpp  bitmap_flip_rotator.hpp  bitmap_frame_decode.hpp  bitmap_frame_decode_test.cpp  bitmap_frame_encode.hpp  bitmap_frame_encode_test.cpp  bitmap_lock.hpp  bitmap_scaler.hpp  bitmap_source.hpp  bitmap_test.cpp  bitmap_view.hpp  color_context.hpp  color_transform.hpp  component_info.hpp  fast_metadata_encoder.hpp  format_converter.hpp  guids.hpp  imaging_factory.hpp  imaging_factory_test.cpp  metadata_query_reader.hpp  metadata_query_writer.hpp  palette.hpp  palette_test.cpp  pixel_format.hpp  stream.hpp  wic_def.hpp  wic_fwd.hpp  wicsdk_guids.hpp
